# code-similarity-mcp

./: .gitignore  .mcp.json  GLOBAL_INSTALL.md  PROJECT_IDEA.md  pyproject.toml  requirements.txt
.claude/agents/: refactoring-analyzer.md  test-reporter.md
.claude/commands/: refactor-plan.md
.claude/rules/: backend-development.md  backend-testing.md  duplication-check.md  keep-index-fresh.md
scripts/: install-global.ps1  install-global.sh  merge_mcp_config.py  similarity_report.py
src/code_similarity_mcp/: __init__.py  __main__.py
src/code_similarity_mcp/embeddings/: __init__.py  generator.py
src/code_similarity_mcp/index/: __init__.py  registry.py
src/code_similarity_mcp/mcp/: server.py
src/code_similarity_mcp/normalizer/: __init__.py  base.py  normalizer.py  python_normalizer.py  registry.py
tests/: test_agent_refactoring_analyzer.py  test_chunk_embeddings.py  test_chunk_hash_idempotency.py  test_chunk_id_map_sync.py  test_chunk_scorer.py  test_command_refactor_plan.py  test_cross_session_chunks.py  test_embeddings.py  test_filter.py  test_global_install.py  test_install_scripts.py  test_mcp_analyze_chunks.py  test_mcp_analyze_new_code.py  test_mcp_analyze_project.py  test_mcp_chunk_repository.py  test_mcp_find_large_functions.py  test_mcp_get_chunk_map.py  test_mcp_index_repository.py  test_mcp_server.py  test_multi_signal_scorer.py  test_normalizer.py  test_parser.py  test_registry.py  test_registry_chunk_faiss.py  test_registry_chunks_schema.py  test_rule_duplication_check.py  test_rule_keep_index_fresh.py  test_scorer.py
(+9 files in other folders)
