[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-similarity-mcp"
version = "0.1.0"
description = "MCP tool for cooperative code similarity detection and refactoring assistance"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
code-similarity-mcp = "code_similarity_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_similarity_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
